Bug 243962 - REGRESSION(253327@main): [ iOS ] 2X imported/w3c/web-platform-tests/css/css-pseudo/(Layout Tests) are almost constant failures
Summary: REGRESSION(253327@main): [ iOS ] 2X imported/w3c/web-platform-tests/css/css-p...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-08-15 16:34 PDT by Hercules Hjalmarsson
Modified: 2022-11-12 17:21 PST (History)
4 users (show)

See Also:


Attachments
Diff Images (37.24 KB, application/zip)
2022-08-15 16:34 PDT, Hercules Hjalmarsson
no flags Details
Diff images (72.66 KB, application/zip)
2022-08-15 16:34 PDT, Hercules Hjalmarsson
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hercules Hjalmarsson 2022-08-15 16:34:23 PDT
Created attachment 461651 [details]
Diff Images

imported/w3c/web-platform-tests/css/css-pseudo/target-text-008.html
imported/w3c/web-platform-tests/css/css-pseudo/highlight-paired-cascade-005.html

Are two almost constant image failures on iOS ToT and since 253327@main.

HISTORY:
https://results.webkit.org/?suite=layout-tests&test=imported/w3c/web-platform-tests/css/css-pseudo/target-text-008.html

Diff images attached.
Comment 1 Hercules Hjalmarsson 2022-08-15 16:34:44 PDT
Created attachment 461652 [details]
Diff images
Comment 2 Radar WebKit Bug Importer 2022-08-15 16:36:34 PDT
<rdar://problem/98693973>
Comment 3 Hercules Hjalmarsson 2022-08-15 16:38:48 PDT
This issue can be bisected to 253327@main using command:

run-webkit-tests --ios-simulator --iterations=100 imported/w3c/web-platform-tests/css/css-pseudo/target-text-008.html

According to the history it appears both these tests started frequently failing on the queues at the same time since 253327@main.
Comment 4 Hercules Hjalmarsson 2022-08-15 16:40:16 PDT
From the diff images it appears that these tests are not just rebaseline issues. Judging by the expected and actual output, it indicates actual failures.
Comment 5 Hercules Hjalmarsson 2022-08-15 16:44:01 PDT
(In reply to Hercules Hjalmarsson from comment #3)
> This issue can be bisected to 253327@main using command:
> 
> run-webkit-tests --ios-simulator --iterations=100
> imported/w3c/web-platform-tests/css/css-pseudo/target-text-008.html
> 
> According to the history it appears both these tests started frequently
> failing on the queues at the same time since 253327@main.

It appears that some of these test failures can be more easily reproduced on iPad.
Comment 6 EWS 2022-08-15 16:55:25 PDT
Test gardening commit 253446@main (d95feca639ce): <https://commits.webkit.org/253446@main>

Reviewed commits have been landed. Closing PR #3332 and removing active labels.
Comment 7 Richard Robinson 2022-11-01 17:36:37 PDT
Pull request: https://github.com/WebKit/WebKit/pull/6018
Comment 8 EWS 2022-11-12 17:21:42 PST
Committed 256615@main (82e61f0babb2): <https://commits.webkit.org/256615@main>

Reviewed commits have been landed. Closing PR #6018 and removing active labels.