REGRESSION(253327@main): [ iOS ] imported/w3c/web-platform-tests/css/css-pseudo/target-text-008.html is an almost constant failure https://bugs.webkit.org/show_bug.cgi?id=243962 rdar://98693973

Reviewed by Aditya Keerthi and Megan Gardner.

This test is failing because the snapshot occasionally captures the text indicator.
We work around this in our own tests with the `scrollToTextFragmentIndicatorEnabled()`
setting. This is not easily an option for WPT, since WPT tests the standard
configuration.

This PR works around this by disabling the text indicator if `isControlledByAutomation`
is true, which will fix the test when it is run with the WPT infrastructure.
WebKitTestRunner will also need some of its behavior to change so that the preference
is disabled when the test is run with our own infrastructure.

* LayoutTests/http/tests/scroll-to-text-fragment/no-iframe-match-expected.html:
* LayoutTests/http/tests/scroll-to-text-fragment/no-iframe-match.html:
* LayoutTests/http/tests/scroll-to-text-fragment/start-text-emoji.html:
* LayoutTests/http/tests/scroll-to-text-fragment/start-text-quote.html:
* LayoutTests/http/tests/scroll-to-text-fragment/start-text-sentence.html:
* LayoutTests/http/tests/scroll-to-text-fragment/start-text-word.html:
* LayoutTests/http/tests/scroll-to-text-fragment/word-display-none.html:
* Source/WebCore/page/FrameView.cpp:
(WebCore::FrameView::scrollToFragment):
* Tools/DumpRenderTree/TestOptions.cpp:
(WTR::TestOptions::defaults):

Canonical link: https://commits.webkit.org/256615@main